add MessageService to handle error messages (better for mock testing the controllers)